# git-eco-bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  META.scm  README.adoc  STATE.scm
.github/workflows/: ci.yml  oikos.yml
.machine_readable/: AGENTIC.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/6scm/: ECOSYSTEM.scm  META.scm
crates/sustainabot-analysis/: Cargo.toml
crates/sustainabot-analysis/src/: analyzer.rs  language.rs  lib.rs  patterns.rs
crates/sustainabot-cli/: Cargo.toml
crates/sustainabot-cli/src/: main.rs
crates/sustainabot-eclexia/: Cargo.toml
crates/sustainabot-eclexia/src/: lib.rs
crates/sustainabot-metrics/src/: lib.rs
